k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: golabs
  labels:
    app.kubernetes.io/part-of: golabs
